# vanta

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE.md  RELEASING.md  SECURITY-AUDIT.md  deny.toml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml  release.yml
crates/vanta/: CHANGELOG.md  Cargo.toml
crates/vanta-cli/: CHANGELOG.md  Cargo.toml
crates/vanta-cli/src/: lib.rs
crates/vanta-cli/tests/: official_registry.rs
crates/vanta-config/: CHANGELOG.md  Cargo.toml
crates/vanta-config/src/: lib.rs  model.rs
crates/vanta-core/: CHANGELOG.md  Cargo.toml
crates/vanta-core/src/: error.rs  lib.rs  platform.rs  traits.rs  types.rs  version.rs
crates/vanta-diag/: CHANGELOG.md  Cargo.toml
crates/vanta-diag/src/: lib.rs
crates/vanta-env/: CHANGELOG.md  Cargo.toml
crates/vanta-env/src/: lib.rs
crates/vanta-install/: CHANGELOG.md  Cargo.toml
crates/vanta-install/src/: lib.rs
crates/vanta-install/tests/: e2e.rs
crates/vanta-lock/: CHANGELOG.md  Cargo.toml
crates/vanta-lock/src/: lib.rs
crates/vanta-migrate/: CHANGELOG.md  Cargo.toml
crates/vanta-migrate/src/: lib.rs
crates/vanta-net/: CHANGELOG.md  Cargo.toml
crates/vanta-net/src/: lib.rs
crates/vanta-platform/: CHANGELOG.md  Cargo.toml
crates/vanta-platform/src/: lib.rs
crates/vanta-provider/: CHANGELOG.md  Cargo.toml
crates/vanta-provider/src/: lib.rs  wasm.rs
crates/vanta-registry/: CHANGELOG.md  Cargo.toml
crates/vanta-registry/src/: lib.rs
crates/vanta-resolve/: CHANGELOG.md  Cargo.toml
crates/vanta-resolve/src/: lib.rs
crates/vanta-sdk/: CHANGELOG.md  Cargo.toml
crates/vanta-sdk/src/: lib.rs
crates/vanta-security/: CHANGELOG.md  Cargo.toml
crates/vanta-security/src/: lib.rs  sign.rs  trust.rs
crates/vanta-shim/: CHANGELOG.md  Cargo.toml
crates/vanta-shim/src/: main.rs
crates/vanta-state/: CHANGELOG.md  Cargo.toml
crates/vanta-state/src/: lib.rs
crates/vanta-store/: CHANGELOG.md  Cargo.toml
crates/vanta-store/src/: hash.rs  lib.rs  link.rs
crates/vanta-test/: CHANGELOG.md  Cargo.toml
crates/vanta-test/src/: lib.rs
crates/vanta-ui/: CHANGELOG.md  Cargo.toml
crates/vanta-ui/src/: lib.rs
crates/vanta/src/: main.rs
docs/: 01-vision.md  02-architecture.md  03-repository.md  04-cli.md  05-configuration.md  06-resolution.md  07-providers.md  08-installation.md  09-store.md  10-environments.md  11-reproducibility.md  12-updates.md  13-offline.md  14-enterprise.md  15-security.md  16-performance.md  17-cross-platform.md  18-developer-experience.md  19-milestones.md  20-future.md  21-threat-model.md  22-provider-sdk.md  23-data-and-state-model.md  24-architecture-decision-records.md  25-error-and-exit-code-catalog.md  26-registry-and-metadata-reference.md  27-config-reference.md  28-testing.md  29-public-apis.md  30-migration.md  31-lockfile-and-manifest-reference.md  32-release-engineering.md  33-prior-art.md  README.md
registry/: README.md  registry.toml  registry.toml.minisig
scripts/: install.ps1  install.sh
xtask/: Cargo.toml
xtask/src/: main.rs  registry_gen.rs
