[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/vanta-dev/vanta"
homepage = "https://vanta.dev"

# Shared dependency versions. Declared centrally and inherited by member crates
# via `<dep>.workspace = true` (see docs/03-repository.md). The external crates
# below are the intended set; they are wired into member crates as each subsystem
# is implemented per docs/19-milestones.md. The scaffold's `vanta-core` is
# intentionally dependency-free so the workspace builds with only std.
[workspace.dependencies]
# intra-workspace (path) — convenience handles
vanta-core = { path = "crates/vanta-core" }
vanta-platform = { path = "crates/vanta-platform" }
vanta-config = { path = "crates/vanta-config" }
vanta-lock = { path = "crates/vanta-lock" }
vanta-resolve = { path = "crates/vanta-resolve" }
vanta-registry = { path = "crates/vanta-registry" }
vanta-provider = { path = "crates/vanta-provider" }
vanta-net = { path = "crates/vanta-net" }
vanta-store = { path = "crates/vanta-store" }
vanta-install = { path = "crates/vanta-install" }
vanta-env = { path = "crates/vanta-env" }
vanta-security = { path = "crates/vanta-security" }
vanta-state = { path = "crates/vanta-state" }
vanta-diag = { path = "crates/vanta-diag" }
vanta-cli = { path = "crates/vanta-cli" }
vanta-sdk = { path = "crates/vanta-sdk" }
vanta-migrate = { path = "crates/vanta-migrate" }
vanta-test = { path = "crates/vanta-test" }

# external (intended; see docs/03 §shared-dependencies) — not yet wired in the scaffold
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rustls = "0.23"
redb = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
sha2 = "0.10"
tar = "0.4"
zip = "2"
flate2 = "1"
zstd = "0.13"
xz2 = "0.1"
thiserror = "2"
anyhow = "1"
semver = "1"
ed25519-dalek = "2"
base64 = "0.22"
blake2 = "0.10"
wasmtime = "27"
wat = "1"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
