[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.0.4"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/squaretick/vanta"
homepage = "https://vanta.dev"

# Shared dependency versions, declared centrally and inherited by member crates
# via `<dep>.workspace = true` (see docs/03-repository.md). `vanta-core` is
# dependency-free so every other crate can depend on it freely.
[workspace.dependencies]
# intra-workspace (path) — convenience handles
vanta-core = { path = "crates/vanta-core", version = "0.0.4" }
vanta-platform = { path = "crates/vanta-platform", version = "0.0.4" }
vanta-config = { path = "crates/vanta-config", version = "0.0.4" }
vanta-lock = { path = "crates/vanta-lock", version = "0.0.4" }
vanta-resolve = { path = "crates/vanta-resolve", version = "0.0.4" }
vanta-registry = { path = "crates/vanta-registry", version = "0.0.4" }
vanta-provider = { path = "crates/vanta-provider", version = "0.0.4" }
vanta-net = { path = "crates/vanta-net", version = "0.0.4" }
vanta-store = { path = "crates/vanta-store", version = "0.0.4" }
vanta-install = { path = "crates/vanta-install", version = "0.0.4" }
vanta-env = { path = "crates/vanta-env", version = "0.0.4" }
vanta-security = { path = "crates/vanta-security", version = "0.0.4" }
vanta-state = { path = "crates/vanta-state", version = "0.0.4" }
vanta-diag = { path = "crates/vanta-diag", version = "0.0.4" }
vanta-cli = { path = "crates/vanta-cli", version = "0.0.4" }
vanta-ui = { path = "crates/vanta-ui", version = "0.0.4" }
vanta-sdk = { path = "crates/vanta-sdk", version = "0.0.4" }
vanta-migrate = { path = "crates/vanta-migrate", version = "0.0.4" }
# test-only helper, never published. Path-only (no version) so cargo strips it
# from dependents' published manifests — it appears only in [dev-dependencies].
vanta-test = { path = "crates/vanta-test" }

# external (intended; see docs/03 §shared-dependencies) — not yet wired in the scaffold
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rustls = "0.23"
redb = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
sha2 = "0.10"
tar = "0.4"
zip = "2"
flate2 = "1"
zstd = "0.13"
xz2 = "0.1"
thiserror = "2"
anyhow = "1"
semver = "1"
ed25519-dalek = "2"
base64 = "0.22"
blake2 = "0.10"
wasmtime = "43"
wat = "1"
proptest = "1"
indicatif = "0.18"
owo-colors = "4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
