[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vanta developer automation: codegen, distribution, and benchmarks (docs/03-repository.md)."
publish = false

[dependencies]
vanta-core.workspace = true
vanta-provider.workspace = true
vanta-net.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
