[package]
name = "vanta-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vanta command implementations (the library behind the `vanta` binary)."

# `clap` and the remaining orchestration crates (vanta-env/diag) are wired in as
# the commands are implemented (Phase 4, docs/19-milestones.md).
[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
vanta-registry = { path = "../vanta-registry", version = "0.0.0" }
vanta-resolve = { path = "../vanta-resolve", version = "0.0.0" }
vanta-install = { path = "../vanta-install", version = "0.0.0" }
vanta-env = { path = "../vanta-env", version = "0.0.0" }
vanta-net = { path = "../vanta-net", version = "0.0.0" }
vanta-config = { path = "../vanta-config", version = "0.0.0" }
vanta-lock = { path = "../vanta-lock", version = "0.0.0" }
vanta-diag = { path = "../vanta-diag", version = "0.0.0" }
vanta-migrate = { path = "../vanta-migrate", version = "0.0.0" }
vanta-security = { path = "../vanta-security", version = "0.0.0" }
