[package]
name = "vanta-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vanta command implementations (the library behind the `vanta` binary)."

# `clap` and the remaining orchestration crates (vanta-env/diag) are wired in as
# the commands are implemented (Phase 4, docs/19-milestones.md).
[dependencies]
vanta-core.workspace = true
vanta-registry.workspace = true
vanta-resolve.workspace = true
vanta-install.workspace = true
vanta-env.workspace = true
vanta-net.workspace = true
vanta-config.workspace = true
vanta-lock.workspace = true
vanta-diag.workspace = true
vanta-migrate.workspace = true
vanta-security.workspace = true
