[package]
name = "vanta-diag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "doctor checks, diagnostics rendering, error-code registry"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
vanta-store = { path = "../vanta-store", version = "0.0.0" }
vanta-state = { path = "../vanta-state", version = "0.0.0" }
