[package]
name = "vanta-diag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "doctor checks, diagnostics rendering, error-code registry"

[dependencies]
vanta-core.workspace = true
vanta-store.workspace = true
vanta-state.workspace = true
