[package]
name = "vanta-env"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "environment composition, activation, shell-hook generation"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
vanta-store = { path = "../vanta-store", version = "0.0.0" }
