[package]
name = "vanta-install"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "install engine: plan/fetch/verify/materialize/link/commit, generations"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
vanta-store = { path = "../vanta-store", version = "0.0.0" }
vanta-net = { path = "../vanta-net", version = "0.0.0" }
vanta-state = { path = "../vanta-state", version = "0.0.0" }
vanta-security = { path = "../vanta-security", version = "0.0.0" }
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
vanta-test = { path = "../vanta-test", version = "0.0.0" }

