[package]
name = "vanta-install"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "install engine: plan/fetch/verify/materialize/link/commit, generations"

[dependencies]
vanta-core.workspace = true
vanta-store.workspace = true
vanta-net.workspace = true
vanta-state.workspace = true
vanta-security.workspace = true
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
vanta-test.workspace = true

