[package]
name = "vanta-lock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "vanta.lock model, manifest<->lock reconcile, canonical serialization"

[dependencies]
vanta-core.workspace = true
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
