[package]
name = "vanta-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OS/arch/libc detection, paths, link strategies, shells, executable handling"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
