[package]
name = "vanta-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "registry index, distribution, search, metadata, caching"

[dependencies]
vanta-core = { path = "../vanta-core" }
vanta-provider = { path = "../vanta-provider" }
serde = { workspace = true }
toml = { workspace = true }
