[package]
name = "vanta-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "registry index, distribution, search, metadata, caching"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
vanta-provider = { path = "../vanta-provider", version = "0.0.0" }
serde = { workspace = true }
toml = { workspace = true }
