[package]
name = "vanta-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "registry index, distribution, search, metadata, caching"

[dependencies]
vanta-core.workspace = true
vanta-provider.workspace = true
serde = { workspace = true }
toml = { workspace = true }
