[package]
name = "vanta-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "request to resolution, version ordering, constraints, dependency DAG"

[dependencies]
vanta-core = { path = "../vanta-core" }
vanta-registry = { path = "../vanta-registry" }
vanta-provider = { path = "../vanta-provider" }
semver = { workspace = true }
