[package]
name = "vanta-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "request to resolution, version ordering, constraints, dependency DAG"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
vanta-registry = { path = "../vanta-registry", version = "0.0.0" }
vanta-provider = { path = "../vanta-provider", version = "0.0.0" }
semver = { workspace = true }
