[package]
name = "vanta-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "request to resolution, version ordering, constraints, dependency DAG"

[dependencies]
vanta-core.workspace = true
vanta-registry.workspace = true
vanta-provider.workspace = true
vanta-security.workspace = true
semver = { workspace = true }
