[package]
name = "vanta-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "checksums, signatures, trust db, SBOM, provenance, sandbox policy"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
sha2 = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
