[package]
name = "vanta-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "redb state DB: store index, gc roots, generation history, caches"

[dependencies]
vanta-core = { path = "../vanta-core" }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
