[package]
name = "vanta-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "content-addressed store, atomic publish, links, dedup, integrity, GC"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
blake3 = { workspace = true }
