[package]
name = "vanta-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "test harness, fakes (registry/provider/upstream), conformance utilities"

[dependencies]
vanta-core = { path = "../vanta-core", version = "0.0.0" }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
