[package]
name = "vanta-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "test harness, fakes (registry/provider/upstream), conformance utilities"
# Internal test-only helper, consumed solely as a dev-dependency. Not published.
publish = false

[dependencies]
vanta-core.workspace = true
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
